--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.11.49",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
+    "axios-hooks": "^3.1.4",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
