--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "gh-pages": "^4.0.0",
     "typescript": "^4.7.4"
   }
